--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
 <!DOCTYPEhtml>
 <html lang = "en">
-
+  <head>
+    <meta charset = "UTF-8">
+    <title> Memory Game </title>
+    <link rel = "stylesheet" href = "style.css">
+  </head>
+  <body>
+    <script src = "scripts.js"></script>
+  </body>
 </html>
