🌷📫 Checkpoint ./.glitch-assets:16004622/2995 ./index.html:16004622/406

--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <link rel = "stylesheet" href = "style.css">
   </head>
   <body>
+    <section class = "memory-game">
+      <div class = "memory-card">
+        <img class = "front-face" src = "https://cdn.glitch.com/a56954c8-ba3e-4fbd-942f-9367e8c467bf%2Fpizza.jpg?v=1589022596064" alt= "pizza" />
+        <img class = "back-face" src = "assets/fork.jpg" alt= "pizza" />
+      </div>
+    </section>
+    
     <script src = "scripts.js"></script>
   </body>
 </html>
