🌑☕️ Checkpoint ./index.html:16004622/5248

--- a/index.html
+++ b/index.html
@@ -9,7 +9,51 @@
     <section class = "memory-game">
       <div class = "memory-card">
         <img class = "front-face" src = "https://cdn.glitch.com/a56954c8-ba3e-4fbd-942f-9367e8c467bf%2Fpizza.jpg?v=1589022596064" alt= "pizza" />
-        <img class = "back-face" src = "assets/fork.jpg" alt= "pizza" />
+        <img class = "back-face" src = "https://cdn.glitch.com/a56954c8-ba3e-4fbd-942f-9367e8c467bf%2Ffork.jpg?v=1589022354269" alt= "pizza" />
+      </div>
+      <div class = "memory-card">
+        <img class = "front-face" src = "https://cdn.glitch.com/a56954c8-ba3e-4fbd-942f-9367e8c467bf%2Fpizza.jpg?v=1589022596064" alt= "pizza" />
+        <img class = "back-face" src = "https://cdn.glitch.com/a56954c8-ba3e-4fbd-942f-9367e8c467bf%2Ffork.jpg?v=1589022354269" alt= "pizza" />
+      </div>
+      <div class = "memory-card">
+        <img class = "front-face" src = "https://cdn.glitch.com/a56954c8-ba3e-4fbd-942f-9367e8c467bf%2Fmomo.jpg?v=1589022465100" alt= "momo" />
+        <img class = "back-face" src = "https://cdn.glitch.com/a56954c8-ba3e-4fbd-942f-9367e8c467bf%2Ffork.jpg?v=1589022354269" alt= "momo" />
+      </div>
+      <div class = "memory-card">
+        <img class = "front-face" src = "https://cdn.glitch.com/a56954c8-ba3e-4fbd-942f-9367e8c467bf%2Fmomo.jpg?v=1589022465100" alt= "momo" />
+        <img class = "back-face" src = "https://cdn.glitch.com/a56954c8-ba3e-4fbd-942f-9367e8c467bf%2Ffork.jpg?v=1589022354269" alt= "momo" />
+      </div>   
+      <div class = "memory-card">
+        <img class = "front-face" src = "https://cdn.glitch.com/a56954c8-ba3e-4fbd-942f-9367e8c467bf%2Fshwarma.jpg?v=1589022417308" alt= "shwarma" />
+        <img class = "back-face" src = "https://cdn.glitch.com/a56954c8-ba3e-4fbd-942f-9367e8c467bf%2Ffork.jpg?v=1589022354269" alt= "shwarma" />
+      </div>
+      <div class = "memory-card">
+        <img class = "front-face" src = "https://cdn.glitch.com/a56954c8-ba3e-4fbd-942f-9367e8c467bf%2Fshwarma.jpg?v=1589022417308" alt= "shwarma" />
+        <img class = "back-face" src = "https://cdn.glitch.com/a56954c8-ba3e-4fbd-942f-9367e8c467bf%2Ffork.jpg?v=1589022354269" alt= "shwarma" />
+      </div> 
+      <div class = "memory-card">
+        <img class = "front-face" src = "https://cdn.glitch.com/a56954c8-ba3e-4fbd-942f-9367e8c467bf%2Fguava.jpg?v=1589022357870" alt= "guava" />
+        <img class = "back-face" src = "https://cdn.glitch.com/a56954c8-ba3e-4fbd-942f-9367e8c467bf%2Ffork.jpg?v=1589022354269" alt= "guava" />
+      </div>
+      <div class = "memory-card">
+        <img class = "front-face" src = "https://cdn.glitch.com/a56954c8-ba3e-4fbd-942f-9367e8c467bf%2Fguava.jpg?v=1589022357870" alt= "guava" />
+        <img class = "back-face" src = "https://cdn.glitch.com/a56954c8-ba3e-4fbd-942f-9367e8c467bf%2Ffork.jpg?v=1589022354269" alt= "guava" />
+      </div>
+      <div class = "memory-card">
+        <img class = "front-face" src = "" alt= "" />
+        <img class = "back-face" src = "https://cdn.glitch.com/a56954c8-ba3e-4fbd-942f-9367e8c467bf%2Ffork.jpg?v=1589022354269" alt= "" />
+      </div>
+      <div class = "memory-card">
+        <img class = "front-face" src = "" alt= "" />
+        <img class = "back-face" src = "https://cdn.glitch.com/a56954c8-ba3e-4fbd-942f-9367e8c467bf%2Ffork.jpg?v=1589022354269" alt= "" />
+      </div>
+      <div class = "memory-card">
+        <img class = "front-face" src = "" alt= "" />
+        <img class = "back-face" src = "https://cdn.glitch.com/a56954c8-ba3e-4fbd-942f-9367e8c467bf%2Ffork.jpg?v=1589022354269" alt= "" />
+      </div>
+      <div class = "memory-card">
+        <img class = "front-face" src = "" alt= "" />
+        <img class = "back-face" src = "https://cdn.glitch.com/a56954c8-ba3e-4fbd-942f-9367e8c467bf%2Ffork.jpg?v=1589022354269" alt= "" />
       </div>
     </section>
     
