🎪👳 Checkpoint ./index.html:16004622/502 ./style.css:16004622/26

--- a/index.html
+++ b/index.html
@@ -40,20 +40,20 @@
         <img class = "back-face" src = "https://cdn.glitch.com/a56954c8-ba3e-4fbd-942f-9367e8c467bf%2Ffork.jpg?v=1589022354269" alt= "guava" />
       </div>
       <div class = "memory-card">
-        <img class = "front-face" src = "" alt= "" />
-        <img class = "back-face" src = "https://cdn.glitch.com/a56954c8-ba3e-4fbd-942f-9367e8c467bf%2Ffork.jpg?v=1589022354269" alt= "" />
+        <img class = "front-face" src = "https://cdn.glitch.com/a56954c8-ba3e-4fbd-942f-9367e8c467bf%2Fdosa.jpg?v=1589022349213" alt= "dosa" />
+        <img class = "back-face" src = "https://cdn.glitch.com/a56954c8-ba3e-4fbd-942f-9367e8c467bf%2Ffork.jpg?v=1589022354269" alt= "dosa" />
       </div>
       <div class = "memory-card">
-        <img class = "front-face" src = "" alt= "" />
-        <img class = "back-face" src = "https://cdn.glitch.com/a56954c8-ba3e-4fbd-942f-9367e8c467bf%2Ffork.jpg?v=1589022354269" alt= "" />
+        <img class = "front-face" src = "https://cdn.glitch.com/a56954c8-ba3e-4fbd-942f-9367e8c467bf%2Fdosa.jpg?v=1589022349213" alt= "dosa" />
+        <img class = "back-face" src = "https://cdn.glitch.com/a56954c8-ba3e-4fbd-942f-9367e8c467bf%2Ffork.jpg?v=1589022354269" alt= "dosa" />
       </div>
       <div class = "memory-card">
-        <img class = "front-face" src = "" alt= "" />
-        <img class = "back-face" src = "https://cdn.glitch.com/a56954c8-ba3e-4fbd-942f-9367e8c467bf%2Ffork.jpg?v=1589022354269" alt= "" />
+        <img class = "front-face" src = "https://cdn.glitch.com/a56954c8-ba3e-4fbd-942f-9367e8c467bf%2Fbiryani.jpg?v=1589022340738" alt= "biryani" />
+        <img class = "back-face" src = "https://cdn.glitch.com/a56954c8-ba3e-4fbd-942f-9367e8c467bf%2Ffork.jpg?v=1589022354269" alt= "biryani" />
       </div>
       <div class = "memory-card">
-        <img class = "front-face" src = "" alt= "" />
-        <img class = "back-face" src = "https://cdn.glitch.com/a56954c8-ba3e-4fbd-942f-9367e8c467bf%2Ffork.jpg?v=1589022354269" alt= "" />
+        <img class = "front-face" src = "https://cdn.glitch.com/a56954c8-ba3e-4fbd-942f-9367e8c467bf%2Fbiryani.jpg?v=1589022340738" alt= "biryani" />
+        <img class = "back-face" src = "https://cdn.glitch.com/a56954c8-ba3e-4fbd-942f-9367e8c467bf%2Ffork.jpg?v=1589022354269" alt= "biryani" />
       </div>
     </section>
     
