--- a/index.html
+++ b/index.html
@@ -62,6 +62,6 @@
       </div>
     </section>
     
-    <script src = "scripts.js"></script>
+    <script src = "script.js"></script>
   </body>
 </html>
