--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <section class = "memory-game">
       <div class = "memory-card" data-framework = "pizza">
         <img class = "front-face" src = "https://cdn.glitch.com/a56954c8-ba3e-4fbd-942f-9367e8c467bf%2Fpizza.jpg?v=1589022596064" alt= "pizza" />
-        <img class = "back-face" src = "https://cdn.glitch.com/a56954c8-ba3e-4fbd-942f-9367e8c467bf%2Ffork.jpg?v=1589022354269" alt= "pizza" />
+        <img class = "back-face" src = "https://cdn.glitch.com/a56954c8-ba3e-4fbd-942f-9367e8c467bf%2Fcover.jpg?v=1589042764759" alt= "cover" />
       </div>
       <div class = "memory-card" data-framework = "pizza">
         <img class = "front-face" src = "https://cdn.glitch.com/a56954c8-ba3e-4fbd-942f-9367e8c467bf%2Fpizza.jpg?v=1589022596064" alt= "pizza" />
